# AES

./: CMakeLists.txt  aes-flat.lds  brg_endian.h  build_arm.sh  memcpy.c  rdtsc.h
python_binding/: aesmodule.c  test_aes.py
